Release 5.0.13 (Unreleased)
===========================

Bug fixes
---------

- Fix convective outlet operator setting boundary coefficients for vectors
  (with or without anisotropic diffusion) and tensors.

- Fix the '--id-suffix' run option which behaved as '--id-prefix'.

- Fix inversion of tensor component time plots (probes) YZ and XZ
  (GitLab issue #208).

- GUI: fix crash when accessing time step with some meteo models.

- Fix computation of Rhie & Chow first term in cases where diffusion in
  pressure correction step is anisotropic.
  This could have an impact on calculations with either head losses,
  tensorial porosity or the pseudo-coupled velocity-pressure solver.

Release 5.0.12 (Feb 7 2020)
===========================

Bug fixes
---------

- GUI: fix removal of line break from formulas due to wrong test.

- Fix bug in boundary condition of atmospheric scalars when using
  humid atmosperic model.

Documentation updates
---------------------

- Add P1 interpolation example for probes output.

Release 5.0.11 (Sep 26 2019)
============================

Bug fixes
---------

- Fix crash in ouptut of postprocessing files with subdivided polyhedra
  or polygons in serial mode.

- GUI convergence tracker: fix crash when changing font (GitHub issue #49).

- Fix for crash reading some CGNS files.

- Fix error in some cases of local mesh renumbering using space-filling
  curves (performance tuning, not active by default).

- Fix shifted index in imposed pressure outlet (GUI).

- P1 radiative transfer model: fix computation of incident flux.

- Avoid possible crash with some Fortran compilers in wall boundary
  condition code when the transient turbomachinery model is not active.

- Fix restart of time moments defined by starting physical time.

- GUI: fix reading of reconstruction flux option for pressure and hydraulic
  head. It was not possible to disable flux reconstruction using the GUI for
  these variables.
