@@ -4,6 +4,9 @@ Release 5.0.13 (Unreleased)
 Bug fixes
 ---------
 
+- Fix boundary reconstruction for hybrid Gauss + least-squares vector
+  gradient (GitLab issue #247).
+
 - Fix convective outlet operator setting boundary coefficients for vectors
   (with or without anisotropic diffusion) and tensors.
 
